# api.yml
@@ -13,6 +13,8 @@ paths:
   /archives:
     get:
       summary: List all archives.
+      tags:
+        - Archives
       security:
         - AdminAuth: []
       responses:
@@ -20,11 +22,11 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/ArchiveResponse"
+                $ref: "#/components/schemas/ArchivesResponse"
     post:
       summary: Create an archive.
+      tags:
+        - Archives
       security:
         - AdminAuth: []
       requestBody:
@@ -40,8 +42,22 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ArchiveResponse"
+  /archives/{archiveId}:
+    get:
+      tags:
+        - Archives
+      security:
+        - AdminAuth: []
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ArchiveResponse"
     delete:
       summary: Delete an archive.
+      tags:
+        - Archives
       security:
         - AdminAuth: []
       responses:
@@ -51,8 +67,24 @@ paths:
           description: Not found
 
   /archives/{archiveId}/tokens:
+    get:
+      summary: Retrieve tokens for an archive.
+      tags:
+        - Tokens
+      security:
+        - AdminAuth: []
+      parameters:
+        - $ref: "#/components/parameters/ArchiveId"
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/TokensResponse"
     post:
       summary: Create a token for an archive.
+      tags:
+        - Tokens
       security:
         - AdminAuth: []
       parameters:
@@ -72,8 +104,24 @@ paths:
                 $ref: "#/components/schemas/TokenResponse"
         "404":
           description: Not found
+  /archives/{archiveId}/tokens/{tokenId}:
+    get:
+      summary: Retrieve a token for an archive.
+      tags:
+        - Tokens
+      security:
+        - AdminAuth: []
+      parameters:
+        - $ref: "#/components/parameters/ArchiveId"
+      respones:
+        "200":
+          content:
+            application/json:
+              $ref: "#/components/schemas/TokenResponse"
     delete:
       summary: Delete a token for an archive.
+      tags:
+        - Tokens
       security:
         - AdminAuth: []
       parameters:
@@ -85,6 +133,8 @@ paths:
   /archives/{archiveId}/files:
     get:
       summary: Retrieve all files for an archive.
+      tags:
+        - Files
       security:
         - AdminAuth: []
       parameters:
@@ -93,13 +143,13 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/FileResponse"
+                $ref: "#/components/schemas/FilesResponse"
         "404":
           description: Not found
     post:
       summary: Create a file.
+      tags:
+        - Files
       security:
         - ArchiveAuth: []
       parameters:
@@ -124,6 +174,8 @@ paths:
   /archives/{archiveId}/files/{fileId}:
     get:
       summary: Retrieve a file.
+      tags:
+        - Files
       security:
         - AdminAuth: []
       parameters:
@@ -135,8 +187,39 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/FileResponse"
+    delete:
+      summary: Delete a file.
+      tags:
+        - Files
+      security:
+        - AdminAuth: []
+      parameters:
+        - $ref: "#/components/parameters/ArchiveId"
+        - $ref: "#/components/parameters/FileId"
+      responses:
+        "200":
+          description: Deleted
+  /archives/{archiveId}/files/{fileId}/content:
+    get:
+      summary: Download bytes of a file.
+      tags:
+        - Files
+      security:
+        - AdminAuth: []
+      parameters:
+        - $ref: "#/components/parameters/ArchiveId"
+        - $ref: "#/components/parameters/FileId"
+      responses:
+        "200":
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
     post:
       summary: Upload bytes of a file.
+      tags:
+        - Files
       security:
         - ArchiveAuth: []
       parameters:
@@ -157,17 +240,14 @@ paths:
       responses:
         "201":
           description: Created
-    delete:
-      summary: Delete a file.
-      security:
-        - AdminAuth: []
-      parameters:
-        - $ref: "#/components/parameters/ArchiveId"
-        - $ref: "#/components/parameters/FileId"
-      responses:
-        "200":
-          description: Deleted
 
+tags:
+  - name: Archives
+    description: Archive-related endpoints
+  - name: Files
+    description: File-related endpoints
+  - name: Tokens
+    description: Token-related endpoints
 
 components:
   schemas:
@@ -207,10 +287,14 @@ components:
         maximumSize:
           type: number
           description: The total maximum size of the uploaded files. use 0 to allow any size.
-        files:
+
+    ArchivesResponse:
+      type: object
+      properties:
+        archives:
           type: array
           items:
-            $ref: "#/components/schemas/FileResponse"
+            $ref: "#/components/schemas/ArchiveResponse"
 
     TokenRequest:
       type: object
@@ -230,6 +314,20 @@ components:
         token:
           type: string
           description: Token with upload access to the archive.
+
+    TokensResponse:
+      type: object
+      properties:
+        tokens:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: string
+              created:
+                type: number
+                description: The UTC timestamp at which the token was created.
 
     FileRequest:
       type: object
@@ -274,6 +372,14 @@ components:
         nonce:
           type: string
           description: Hex-encoded nonce used for encryption.
+
+    FilesResponse:
+      type: object
+      properties:
+        files:
+          type: array
+          items:
+            $ref: "#/components/schemas/FileResponse"
 
   parameters:
     ArchiveId:
