# internal/server/server.go
@@ -36,11 +36,21 @@ func (server *Server) Start(address string, port uint16) error {
 
 	handle := wrappers.NewHandle(server.stateStore)
 
-	app.Get("/api/v1/archives", handle(server.handleArchiveRetrieval))
-	app.Post("/api/v1/archives", handle(server.handleArchiveCreation))
-	app.Post("/api/v1/archives/:archiveId/tokens", handle(server.handleArchiveTokenCreation))
-	app.Post("/api/v1/archives/:archiveId/files", handle(server.handleFileCreation))
-	app.Post("/api/v1/archives/:archiveId/files/:fileId", handle(server.handleFileUpload))
+	app.Get("/api/v1/archives", handle(server.handleArchiveList))
+	app.Post("/api/v1/archives", handle(server.handleArchiveCreate))
+	app.Get("/api/v1/archives/:archiveId", handle(server.handleArchiveGet))
+	app.Delete("/api/v1/archives/:archiveId", handle(server.handleArchiveDelete))
+
+	app.Get("/api/v1/archives/:archiveId/tokens", handle(server.handleTokenList))
+	app.Post("/api/v1/archives/:archiveId/tokens", handle(server.handleTokenCreate))
+	app.Get("/api/v1/archives/:archiveId/tokens/:tokenId", handle(server.handleTokenGet))
+	app.Delete("/api/v1/archives/:archiveId/tokens/:tokenId", handle(server.handleTokenDelete))
+
+	app.Get("/api/v1/archives/:archiveId/files", handle(server.handleFileList))
+	app.Post("/api/v1/archives/:archiveId/files", handle(server.handleFileCreate))
+	app.Get("/api/v1/archives/:archiveId/files/:fileId", handle(server.handleFileGet))
+	app.Get("/api/v1/archives/:archiveId/files/:fileId/content", handle(server.handleFileDownload))
+	app.Post("/api/v1/archives/:archiveId/files/:fileId/content", handle(server.handleFileUpload))
 
 	app.Static("/", server.frontend)
 	app.Get("*", func(ctx *fiber.Ctx) error {
